<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/app_black_transparent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/dialog_shape"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tipsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/view_shape"
            android:gravity="center"
            android:layout_margin="5dp"
            android:lineSpacingExtra="5dp"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/tips_button"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tipsOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:gravity="left|center_vertical"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:drawableLeft="@drawable/foods"
            android:drawablePadding="16dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/tips1"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tipsTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:drawableLeft="@drawable/runner"
            android:drawablePadding="16dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/tips2"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tipsThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:drawableLeft="@drawable/fruits"
            android:drawablePadding="16dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/tips3"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tipsFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:drawableLeft="@drawable/swimming"
            android:drawablePadding="16dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/tips4"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tipsFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:drawableLeft="@drawable/foods"
            android:drawablePadding="16dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/tips5"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/cancel_btn_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/cancle_shape"
        android:src="@drawable/ic_action_content_clear" />

</RelativeLayout>
