<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="8dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@android:color/transparent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/dialog_shape"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@color/common_page_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/common_page_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/ash_color_light">

                    <TextView
                        android:id="@+id/contact_dialog_title_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingBottom="8dp"
                        android:paddingTop="16dp"
                        android:text="@string/contact_dialog_title"
                        android:textAppearance="@style/WelcomePagesTextFont"
                        android:textColor="@color/contact_profile_blue"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                </LinearLayout>

                <TextView
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/text_bg"
                    android:clickable="true"
                    android:drawableLeft="@drawable/website"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/website"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/text_bg"
                    android:clickable="true"
                    android:drawableLeft="@drawable/communication"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/mobile"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/text_bg"
                    android:clickable="true"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/email"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/facebook"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/text_bg"
                    android:clickable="true"
                    android:drawableLeft="@drawable/facebook"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/fb"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/twitter"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/text_bg"
                    android:clickable="true"
                    android:drawableLeft="@drawable/twitter"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/twitter"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/gplus"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/text_bg"
                    android:clickable="true"
                    android:drawableLeft="@drawable/googleplus"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/gplus"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/cancle_shape"
        android:src="@drawable/ic_action_content_clear" />

</RelativeLayout>
