<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/reverie_bg"
    tools:context=".MainActivity">

    <!-- define here your others component -->

    <LinearLayout
        android:id="@+id/titlechart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ash_color_light"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/first_column"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/first_column"
            android:textSize="12sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".01"
            android:background="@color/Black" />

        <TextView
            android:id="@+id/second_column"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/second_column"
            android:textSize="12sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".01"
            android:background="@color/Black" />

        <TextView
            android:id="@+id/third_column"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/third_column"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlechart"
        android:padding="5dp">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <!--

         <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="300dp" />
         -->

    </RelativeLayout>

    <!--   <com.google.android.gms.ads.AdView
           android:id="@+id/admob_adview"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:layout_centerHorizontal="true"
           ads:adSize="BANNER"
           ads:adUnitId="@string/banner_footer" />-->
</RelativeLayout>