<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_page_bg"
    tools:context="anindya.duti.com.bmi.MainActivity">


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/exercise_details_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/waist_details_animation_layout"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background="@color/reverie_bg"
                        android:layout_margin="5dp"
                        android:layout_height="200dp">

                        <TextView
                            android:id="@+id/waist_details_text_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_margin="11dp"
                            android:textAppearance="@style/WelcomePagesTextFont"
                            android:textStyle="normal"
                            android:text="@string/dialog2_message"
                            android:textColor="@color/contact_profile_blue"
                            />

                            <Button
                                android:id="@+id/btnStartStore"
                                android:layout_width="120dp"
                                android:layout_height="30dp"
                                android:text="@string/profile_button"
                                android:textAppearance="@style/WelcomePagesTextFont"
                                android:layout_marginTop="16dp"
                                android:textColor="@color/white_text_color"
                                android:textSize="13sp"
                                android:background="@drawable/view_shape"
                                android:foreground="?attr/selectableItemBackground"/>

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

      <com.google.android.gms.ads.AdView
          android:id="@+id/admob_adview"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"
          ads:adSize="BANNER"
          ads:adUnitId="@string/banner_footer" />

</RelativeLayout>